2008-08-13  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: switch Value methods to ref params since atk
	actually checks for initialized values instead of just treating it
	like uninitialized memory.  Makes for uglier API, but avoids crashes
	in unfortunate memory content scenarios.

2008-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/IconTheme.custom: elements and the list returned by
	ListIcons are owned.

2008-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark IconTheme.LoadIcon return as owned.

2008-07-23  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata: map some out params on Atk.Value.  They
	were unusable in their existing form.

2008-07-08  Mike Kestner  <mkestner@novell.com>

	Patch from Christian Hoff with a few minor tweaks.
	* generator/CallbackGen.cs: refactor to use ManagedCallString
	and drop a ton of redundant, half-baked code.
	* generator/ManagedCallString.cs: add Unconditional setup
	method for stuff that has to happen before the try block.
	Add "drop_first" concept so it can be reused by CallbackGen
	which doesn't drop first params.
	* generator/Signal.cs: use Unconditional method for prep.
	* generator/VirtualMethod.cs: use Unconditional method for prep.
	* gtk/Gtk.metadata: mark a ref param. [Fixes #394352]
	
2008-06-28  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark ListStore.Reorder array param.
	* gtk/ListStore.cs: compat obsolete method, though the old one 
	was useless.

2008-06-28  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs: some 64 bit fixes for time_t marshaling
	issue found by Federico.

2008-06-28  Mike Kestner  <mkestner@novell.com>

	* gtk/TreeSelection.custom: use list marshaler to avoid O(n^2)
	copy from old custom code.  [Fixes #404669]

2008-06-28  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: mark a const string. [Fixes #404630]

2008-06-27  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: fix a couple out params.
