@@ -1,3 +1,12 @@
+2008-08-19  Brad Taylor  <brad@getcoded.net>
+	
+	* atk/Object.custom: Add method to allow emission of
+	  visible-data-changed signal.
+
+	* atk/TextChangedDetail.cs: 
+	* atk/TextAdapter.custom: Add method to allow emission of text-changed
+	  signal.
+
 2008-08-13  Mike Kestner  <mkestner@novell.com>
 
 	* atk/Atk.metadata: switch Value methods to ref params since atk
